UX: z-index 220 to fix conflict with Teams

--- a/assets/stylesheets/drawer.scss
+++ b/assets/stylesheets/drawer.scss
@@ -1,7 +1,7 @@
 $header-height: 2.5em;
 
 .topic-chat-float-container {
-  z-index: 120; // higher than timeline, lower than composer
+  z-index: 220; // higher than timeline, lower than composer
   position: fixed;
   right: 0;
   left: 0;
